# spc-arc-agi

./: .dockerignore  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  docker-compose.local.yml  docker-compose.production.yml  pyproject.toml  tasks.py
code/: utils.py
code/books/: starter.ipynb
compose/local/: Dockerfile
compose/production/: Dockerfile  start
data/original/evaluation/: 00576224.json  009d5c81.json  00dbd492.json  03560426.json  05a7bcf2.json  0607ce86.json  0692e18c.json  08573cc6.json  0934a4d8.json  09c534e7.json  0a1d4ef5.json  0a2355a6.json  0b17323b.json  0bb8deee.json  0becf7df.json  0c786b71.json  0c9aba6e.json  0d87d2a6.json  0e671a1a.json  0f63c0b9.json  103eff5b.json  11e1fe23.json  12422b43.json  12997ef3.json  12eac192.json  136b0064.json  13713586.json  137f0df0.json  140c817e.json  14754a24.json  15113be4.json  15663ba9.json  15696249.json  16b78196.json  17b80ad2.json  17cae0c1.json  18419cfa.json  184a9768.json  195ba7dc.json  1990f7a8.json  (+359 more)
data/original/training/: 007bbfb7.json  00d62c1b.json  017c7c7b.json  025d127b.json  045e512c.json  0520fde7.json  05269061.json  05f2a901.json  06df4c85.json  08ed6ac7.json  09629e4f.json  0962bcdd.json  0a938d79.json  0b148d64.json  0ca9ddb6.json  0d3d703e.json  0dfd9992.json  0e206a2e.json  10fcaaa3.json  11852cab.json  1190e5a7.json  137eaa0f.json  150deff5.json  178fcbfb.json  1a07d186.json  1b2d62fb.json  1b60fb0c.json  1bfc4729.json  1c786137.json  1caeab9d.json  1cf80156.json  1e0a9b12.json  1e32b0e9.json  1f0c79e5.json  1f642eb9.json  1f85a75f.json  1f876c06.json  1fad071e.json  2013d3e2.json  2204b7a8.json  (+360 more)
ui/: 01_🏠_Home.py  config.py
ui/pages/: 02_🧭_Data_Explorer.py
